--- a/first-project/src/App.css
+++ b/first-project/src/App.css
@@ -11,7 +11,9 @@
   background-color: #222;
   height: 150px;
   padding: 20px;
-  color: white;
+  color: rgb(149, 196, 218);
+  background-color: #cccccc;
+
 }
 
 .App-title {
@@ -25,4 +27,17 @@
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+.input {
+  width: 400px;
+  height: 60px;
+
+}
+
+div {
+  background-color: rgb(157, 199, 212);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
