--- a/first-project/src/App.css
+++ b/first-project/src/App.css
@@ -1,6 +1,8 @@
 .App {
   text-align: center;
   background-image: url("./WeatherTrackerImage.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -41,7 +43,6 @@
 }
 
 div {
-  background-color: rgb(157, 199, 212);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -56,5 +57,6 @@ div {
 .input {
   width: 500px;
   height: 50px;
-  border-radius: 15px
+  border-radius: 15px;
 }
+
