--- a/first-project/src/App.css
+++ b/first-project/src/App.css
@@ -58,5 +58,14 @@ div {
   width: 500px;
   height: 50px;
   border-radius: 15px;
+  font-size: 20px;
 }
 
+::-webkit-input-placeholder { /* Chrome/Opera/Safari */
+  font-size: 20px;
+  opacity: .4;
+}
+
+.input-header {
+ margin-bottom: 10px;
+}
