--- a/first-project/src/App.css
+++ b/first-project/src/App.css
@@ -69,3 +69,9 @@ div {
 .input-header {
  margin-bottom: 10px;
 }
+
+.weathertext {
+  font-size: 60px;
+  margin-top: 20px;
+  margin-bottom: 20px;
+}
