--- a/first-project/src/App.css
+++ b/first-project/src/App.css
@@ -1,8 +1,6 @@
 .App {
   text-align: center;
-  background-image: url("./WeatherTrackerImage.jpg");
-  background-repeat: no-repeat;
-  background-size: cover;
+  background-color: rgb(32, 32, 80);
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -22,9 +20,17 @@
 
 }
 
+.nav_bar {
+  background-color: rgb(32, 32, 80);
+  margin-bottom: 40px;
+}
+
 .App-title {
-  font-size: 2.5em;
+  width: 100%;
+  height: 60%;
+  font-size: 1.5em;
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  background-color: whitesmoke;
 }
 
 .App-intro {
@@ -34,6 +40,12 @@
 @keyframes App-logo-spin {
   from { transform: rotate(0deg); }
   to { transform: rotate(360deg); }
+}
+
+.dashboard {
+  background-image: url("./WeatherTrackerImage.jpg");
+  background-repeat: no-repeat;
+  background-size: cover;
 }
 
 .inputfield {
@@ -49,9 +61,13 @@ div {
 }
 
 .search {
-  width: 150px;
-  height: 50px;
+  width: 100px;
+  height: 55px;
   background-color: darkgray;
+  border-radius: 7px;
+  margin-left: 20px;
+  font-size: 14px;
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
 }
 
 .input {
@@ -61,13 +77,13 @@ div {
   font-size: 20px;
 }
 
+input_div{
+  margin-top: 40px;
+}
+
 ::-webkit-input-placeholder { /* Chrome/Opera/Safari */
   font-size: 20px;
   opacity: .4;
-}
-
-.input-header {
- margin-bottom: 10px;
 }
 
 .weather-card{
@@ -83,19 +99,58 @@ div {
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif
 }
 
+.weather_card_title {
+  margin-bottom: 0px;
+  margin-top: 5px;
+}
+
 .weathertext {
   font-size: 60px;
-  margin-top: 20px;
+  margin-top: 0px;
   margin-bottom: 20px;
 }
+
 
 .headline{
   font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
   font-size: 30px;
   background-color: white;
+  border-radius: 7px;
   margin-top: 0px;
   margin-bottom: 5px;
   margin-left: auto;
   margin-right: auto;
   width: 800px;
+}
+
+.weather_news {
+display: flex;
+flex-direction: row;
+justify-content: space-around;
+align-items: top;
+}
+
+.displaynews {
+  background-color: transparent;
+  border-radius: 7px;
+}
+
+.headline {
+  font-family: 'Times New Roman', Times, serif;
+  font-size: 18px;
+}
+
+.full_story {
+  font-size: 12px;
+}
+
+.news_list {
+  background-color: whitesmoke;
+  border-radius: 7px;
+}
+
+.top_stories {
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+  background-color: darkred;
+  margin-top: 0px;
 }
